tests/errors/nativeptr_err/nativeptr_err.c
#error nativeptr_err.nativeptr_err:6:17 Expected a pointer type but was: unit
#error nativeptr_err.nativeptr_err:13:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:14:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:17:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:19:3 Type mismatch: '__voidinptr' <> 'uint8'.
#error nativeptr_err.nativeptr_err:20:3 Type mismatch: '__voidinptr' <> 'unit'.
#error nativeptr_err.nativeptr_err:24:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:25:15 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:29:9 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:32:9 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:41:14 Type mismatch: 'nativeptr<int>' <> 'int'.
#error nativeptr_err.nativeptr_err:42:14 Type mismatch: '__inptr<int>' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:43:14 Type mismatch: 'voidptr' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:52:11 Expected a variable.
#error nativeptr_err.nativeptr_err:55:11 Expected a variable.
#error nativeptr_err.nativeptr_err:59:22 Expected pointer type.
#error nativeptr_err.nativeptr_err:61:24 Expected pointer type.
#error nativeptr_err.nativeptr_err:67:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:68:20 Expected pointer type.
#error nativeptr_err.nativeptr_err:69:21 Expected nativeptr but was __outptr.
#error nativeptr_err.nativeptr_err:74:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:75:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:76:22 Expected nativeptr but was __inptr.
